--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+//SCSS
+@import 'styles/colors.scss';
+$main-color: purple;
+
+
+
 .App {
   text-align: center;
 }
@@ -14,7 +20,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: $background-color;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
